--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                     <div class="col-md-7">
                         <h1 id="homeHeading">Building on Bitcoin </h1><h2>Conferences</h2>
                         <hr>
-                        <h2>Lisboa, soon</h2>
+                        <h2>Lisboa, Portugal, soon</h2>
                         <a class="btn btn-primary btn-xl" href="#tickets">Book Tickets</a>
                     </div>
                 </div>
@@ -86,7 +86,7 @@
                     <div class="col-md-7">
                         <h1 id="homeHeading">Building on Bitcoin </h1><h2>Conferences</h2>
                         <hr>
-                        <h2>Lisboa, soon</h2>
+                        <h2>Lisboa, Portugal, soon</h2>
                         <a class="btn btn-primary btn-xl" href="#tickets">Book Tickets</a>
                     </div>
                 </div>
