--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Breaking bitcoin is an event taking place in Paris, focusing on security of Bitcoin and everything around it.">
+    <meta name="description" content="Building on Bitcoin 2018 is a series of practical Bitcoin conferences and workshops in Lisboa, Portugal. Agenda, Booking and many more informations on Building-on-bitcoin.com Conference 2018.">
 
     <title>Building On Bitcoin Conference, Lisboa, Soon 2018</title>
 
