--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbar-collapsible" aria-controls="navbar-collapsible" aria-expanded="true" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <a class="navbar-brand" href="#page-top"><img src="img/Logo_horiz_white.png" alt="Breaking Bitcoin"></a>
+        <a class="navbar-brand" href="#page-top"><img src="img/Logo_horiz_white.png" alt="Building on Bitcoin"></a>
         <div class="navbar-collapse collapse" id="navbar-collapsible">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
