update dates & location

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Building on Bitcoin 2018 is a series of practical Bitcoin conferences and workshops in Lisboa, Portugal. Agenda, Booking and many more informations on Building-on-bitcoin.com Conference 2018.">
 
-    <title>Building On Bitcoin Conference, Lisboa, Soon 2018</title>
+    <title>Building On Bitcoin Conference, Lisboa, 23 - 24 June 2018</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -71,7 +71,7 @@
                     <div class="col-md-7">
                         <h1 id="homeHeading">Building on Bitcoin </h1><h2>Conferences</h2>
                         <hr>
-                        <h2>Lisboa, Portugal, soon</h2>
+                        <h2>Lisboa, Portugal, 23-24 June</h2>
                         <a class="btn btn-primary btn-xl" href="#tickets">Book Tickets</a>
                     </div>
                 </div>
@@ -86,7 +86,7 @@
                     <div class="col-md-7">
                         <h1 id="homeHeading">Building on Bitcoin </h1><h2>Conferences</h2>
                         <hr>
-                        <h2>Lisboa, Portugal, soon</h2>
+                        <h2>Lisboa, Portugal, 23-24 June</h2>
                         <a class="btn btn-primary btn-xl" href="#tickets">Book Tickets</a>
                     </div>
                 </div>
@@ -452,7 +452,7 @@
                         <br>
                         <b>contact@building-on-bitcoin.com</b>
                     </p>
-                    <p class="text-black"> The venue can host up to 500 people, so be sure to order a ticket now!</p>
+                    <p class="text-black"> The venue can host up to 550 people, so be sure to order a ticket now!</p>
                     <a href="#" class="btn btn-primary btn-xl mt-4">Buy Tickets Now</a>
                 </div>
             </div>
@@ -470,9 +470,9 @@
         <div class="container mt-4">
             <div class="row">
                 <div class="col-lg-12 col-md-12 text-center">
-                    <h3>Soon TM</h3>
+                    <h3>Av. Defensores de Chaves 85B, 1000-070 Lisboa, Portugal</h3>
                     <div class="google-maps">
-                      <iframe src="https://www.google.com/maps/" width="600" height="450" frameborder="0" style="border:0" allowfullscreen class="mt-5"></iframe>
+                      <iframe src="https://www.google.fr/maps/place/Audit%C3%B3rio+A.+Domingues+de+Azevedo/@38.7397898,-9.146321,17.73z/data=!4m8!1m2!2m1!1sAnt%C3%B3nio+Domingues+de+Azevedo+Auditorium+Lisbonne!3m4!1s0xd1933a768229f8d:0x6503331bc17cb82d!8m2!3d38.7402236!4d-9.1448366" width="600" height="450" frameborder="0" style="border:0" allowfullscreen class="mt-5"></iframe>
                     </div>
                 </div>
             </div>
