--- a/index.html
+++ b/index.html
@@ -89,14 +89,6 @@
                                 <p>Prices:</p>
                                 <ul>
                                     <li itemprop="offers" itemscope="" itemtype="http://schema.org/Offer">
-                                        <a itemprop="url" href="https://ti.to/breaking-bitcoin/breaking-bitcoin#student">
-                                            <span itemprop="name" content="Students">Students</span>
-                                            <span itemprop="price" content="100.00">
-                                          <span itemprop="priceCurrency" content="EUR">100€</span>
-                                        </span>
-                                        </a>
-                                    </li>
-                                    <li itemprop="offers" itemscope="" itemtype="http://schema.org/Offer">
                                         <a itemprop="url" href="https://ti.to/breaking-bitcoin/breaking-bitcoin#normal">
                                             <span itemprop="name" content="Individual or startup"><strike>Individual or startup</strike></span>
                                             <span itemprop="price" content="250.00">
@@ -474,6 +466,10 @@
                     </a>
                 -->
                   </ul>
+
+                    <br><br>
+                    <p>Want to be a speaker?</p>
+                    <strong>speakers@building-on-bitcoin.com</strong>
                 </div>
             </div>
         </div>
@@ -485,17 +481,15 @@
                     <h2 class="section-heading text-black">Tickets</h2>
                     <hr class="invert">
                     <p class="text-black">
-                        <b>€100</b> for students
-                        <br><br>
                         <b>€250</b> Individual or startup
                         <br><br>
                         <b>€500</b> Regular business / corporate / Late birds
                         <br><br>
-                        For those who want to pay in Bitcoin and Students, you <b>must</b> contact us at
+                        If you want to pay <strong>in bitcoins</strong>, or if you want to benefit from the Student Discount, contact us at:
                         <br>
-                        <b>contact@building-on-bitcoin.com</b>
+                        <strong>contact@building-on-bitcoin.com</strong>
                     </p>
-                    <p class="text-black"> The venue can host up to 550 people, so be sure to order a ticket now!</p>
+                    <p class="text-black">Last year, Breaking Bitcoin was a sold-out event. Be quick!</p>
                     <a href="#" class="btn btn-primary btn-xl mt-4">Buy Tickets Now</a>
                 </div>
             </div>
