Added want to be a speaker

--- a/index.html
+++ b/index.html
@@ -466,8 +466,10 @@
                     </a>
                 -->
                   </ul>
-
-                    <br><br>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-8 offset-lg-2 text-center">
                     <p>Want to be a speaker?</p>
                     <strong>speakers@building-on-bitcoin.com</strong>
                 </div>
