Added want to be a speaker

--- a/index.html
+++ b/index.html
@@ -235,14 +235,66 @@
             <div class="row">
                 <div class="text-center">
                   <ul id="confirmed-speakers">
-                    <!--
+
                     <a href="https://twitter.com/nopara73" target="_blank" style="text-decoration:none !important;">
                         <li>
-                            <img src="img/speakers/adamFiscor.jpg" width="180" height="180" alt="Adam Fiscor "/>
+                            <img src="img/speakers/adamFiscor.jpg" width="180" height="180" alt="Adam Fiscor"/>
                             <span class="name">Adam Ficsor</span>
                             <span class="role">TumbleBit</span>
                         </li>
                     </a>
+                      <a href="https://twitter.com/kanzure" target="_blank" style="text-decoration:none !important;">
+                          <li>
+                              <img src="img/speakers/bryanBishop.jpg" width="180" height="180" alt="Bryan Bishop"/>
+                              <span class="name">Bryan Bishop</span>
+                              <span class="role">LedgerX</span>
+                          </li>
+                      </a>
+                      <a href="https://twitter.com/truthcoin" target="_blank" style="text-decoration:none !important;">
+                          <li>
+                              <img src="img/speakers/paulSztorc.jpg" width="180" height="180" alt="Paul Sztorc"/>
+                              <span class="name">Paul Sztorc</span>
+                              <span class="role">Drivechain</span>
+                          </li>
+                      </a>
+                      <a href="https://twitter.com/giacomozucco" target="_blank" style="text-decoration:none !important;">
+                          <li>
+                              <img src="img/speakers/giacomoZucco.jpg" width="180" height="180" alt="Giacomo Zucco"/>
+                              <span class="name">Giacomo Zucco</span>
+                              <span class="role">BHB Network</span>
+
+                          </li>
+                      </a>
+                      <a href="https://twitter.com/BTChip" target="_blank" style="text-decoration:none !important;">
+                          <li>
+                              <img src="img/speakers/nicolasBacca.jpg" width="180" height="180" alt="Nicolas Bacca"/>
+                              <span class="name">Nicolas Bacca</span>
+                              <span class="role">Ledger</span>
+                          </li>
+                      </a>
+                      <a href="https://twitter.com/NicolasDorier" target="_blank" style="text-decoration:none !important;">
+                          <li>
+                              <img src="img/speakers/nicolasDorier.jpg" width="180" height="180" alt="Nicolas Dorier"/>
+                              <span class="name">Nicolas Dorier</span>
+                              <span class="role">Metaco SA</span>
+                          </li>
+                      </a>
+                      <a href="https://twitter.com/AaronvanW" target="_blank" style="text-decoration:none !important;">
+                          <li>
+                              <img src="img/speakers/aaronVanWirdum.jpg" width="180" height="180" alt="Aaron van Wirdum"/>
+                              <span class="name">Aaron van Wirdum</span>
+                              <span class="role">Bitcoin Magazine</span>
+                          </li>
+                      </a>
+
+                      <a href="https://twitter.com/KLoaec" target="_blank" style="text-decoration:none !important;">
+                          <li>
+                              <img src="img/speakers/kevinLoaec.jpg" width="180" height="180" alt="Kevin Loaec "/>
+                              <span class="name">Kevin Loaec</span>
+                              <span class="role">Chainsmiths</span>
+                          </li>
+                      </a>
+                      <!--
                     <a href="https://twitter.com/sysmannet" target="_blank" style="text-decoration:none !important;">
                         <li>
                             <img src="img/speakers/alexPetrov.jpg" width="180" height="180" alt="Alex Petrov "/>
@@ -320,15 +372,9 @@
                             <span class="role">Acinq</span>
 
                         </li>
-                    </a>
-                    <a href="https://twitter.com/giacomozucco" target="_blank" style="text-decoration:none !important;">
-                        <li>
-                            <img src="img/speakers/giacomoZucco.jpg" width="180" height="180" alt="Giacomo Zucco "/>
-                            <span class="name">Giacomo Zucco</span>
-                            <span class="role">BHB Network</span>
+                    </a>-->
 
-                        </li>
-                    </a>
+                      <!--
                     <a href="https://twitter.com/james_hilliard" target="_blank" style="text-decoration:none !important;">
                         <li>
                             <img src="img/speakers/jamesHilliard.jpg" width="180" height="180" alt="James Hilliard "/>
@@ -350,13 +396,6 @@
                             <img src="img/speakers/jimmySong.jpg" width="180" height="180" alt="Jimmy Song "/>
                             <span class="name">Jimmy Song</span>
                             <span class="role">Paxos</span>
-                        </li>
-                    </a>
-                    <a href="https://twitter.com/KLoaec" target="_blank" style="text-decoration:none !important;">
-                        <li>
-                            <img src="img/speakers/kevinLoaec.jpg" width="180" height="180" alt="Kevin Loaec "/>
-                            <span class="name">Kevin Loaec</span>
-                            <span class="role">Chainsmiths</span>
                         </li>
                     </a>
                     <a href="https://twitter.com/bit_kevin" target="_blank" style="text-decoration:none !important;">
@@ -408,13 +447,9 @@
                             <span class="role">Researcher at  Graz University of Technology</span>
                         </li>
                     </a>
-                    <a href="https://twitter.com/BTChip" target="_blank" style="text-decoration:none !important;">
-                        <li>
-                            <img src="img/speakers/nicolasBacca.jpg" width="180" height="180" alt="Nicolas Bacca "/>
-                            <span class="name">Nicolas Bacca</span>
-                            <span class="role">Ledger</span>
-                        </li>
-                    </a>
+                    -->
+
+                      <!--
                     <a href="http://www0.cs.ucl.ac.uk/staff/P.McCorry" target="_blank" style="text-decoration:none !important;">
                         <li>
                             <img src="img/speakers/patrickMcCorry.jpg" width="180" height="180" alt="Patrick McCorry "/>
@@ -547,122 +582,6 @@
                     </div>
                 </div>
             </div>
-
-            <div class="row">
-                <div class="text-center">
-                    <div class="separator"></div>
-                    <h2 class="section-heading text-black">Sponsors</h2>
-                    <hr class="invert">
-                    <div class="separator"></div>
-                    <div class="col-md-12">
-                        <div class="row">
-                            <div class="col-md-6 offset-md-3">
-                                <!--<a class="sponsor" href="https://www.ledgerwallet.com/" target="_blank">
-                                    <img class="img-fluid" src="img/sponsors/ledgerLogo.png" alt="Ledger">
-                                </a>-->
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="separator"></div>
-
-
-                    <div class="col-md-12">
-                        <div class="row">
-                            <div class="col-md-12">
-                                <h3 class="section-heading text-black">Silver</h3>
-                                <hr class="invert">
-                            </div>
-                        </div>
-                        <br /><br />
-                        <div class="row">
-                            <div class="col-md-2 offset-md-2">
-                                <!--<a href="https://trezor.io/" class="sponsor" target="_blank">
-                                    <img class="img-fluid" src="img/sponsors/silver/trezor.png" alt="Trezor">
-                                </a>-->
-                            </div>
-                            <div class="col-md-2">
-                                <!--<a href="http://bhb.network/" class="sponsor" target="_blank">
-                                    <img class="img-fluid" src="img/sponsors/silver/bhb.png" alt="BHB Network">
-                                </a>-->
-                            </div>
-
-                            <div class="col-md-2">
-                                <!--<a href="https://z.cash/" class="sponsor" target="_blank">
-                                    <img class="img-fluid" src="img/sponsors/silver/zcash.png" alt="Zcash">
-                                </a>-->
-                            </div>
-                            <div class="col-md-2">
-                                <!--<a href="http://chaincode.com/" class="sponsor" target="_blank">
-                                    <img class="img-fluid" src="img/sponsors/silver/chaincode.png" alt="Chaincode">
-                                </a>-->
-                            </div>
-                        </div>
-                        <br /><br />
-                        <div class="row">
-                            <div class="col-md-2 offset-md-4">
-                                <!--<a href="https://ciphrex.io/" class="sponsor" target="_blank">
-                                    <img class="img-fluid" src="img/sponsors/silver/ciphrex.png" alt="Ciphrex">
-                                </a>-->
-                            </div>
-                            <div class="col-md-2">
-                                <!--<a href="https://bitmainwarranty.com/" class="sponsor" target="_blank">
-                                    <img src="img/sponsors/silver/myrig.png" alt="MyRIG" class="img-fluid">
-                                </a>-->
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="separator"></div>
-
-                    <div class="col-md-12">
-                        <div class="row">
-                            <div class="col-md-12">
-                                <h3 class="section-heading text-black">Coal</h3>
-                                <hr class="invert">
-                            </div>
-                        </div>
-                        <br /><br />
-                        <div class="row">
-                            <div class="col-md-2 offset-md-3">
-                                <!--<a class="sponsor" href="https://www.woleet.io" target="_blank">
-                                    <img class="img-fluid" src="img/sponsors/coal/woleetLogo.png" alt="Woleet">
-                                </a>-->
-                            </div>
-                            <div class="col-md-2">
-                                <!--<a class="sponsor" href="https://condensat.tech" target="_blank">
-                                    <img class="img-fluid" src="img/sponsors/coal/condensat.png" alt="Condensat technologies">
-                                </a>-->
-                            </div>
-                            <div class="col-md-2">
-                                <!--<a class="sponsor" href="https://blockstream.com" target="_blank">
-                                    <img class="img-fluid" src="img/sponsors/coal/blockstream.png" alt="Blockstream">
-                                </a>-->
-                            </div>
-                        </div>
-
-                        <a href="sponsors/#" class="btn btn-primary btn-xl mt-4" type="application/pdf">Become a sponsor</a>
-                    </div>
-                    <div class="separator"></div>
-                </div>
-            </div>
-            <div class="separator"></div>
-            <div class="row">
-                <div class="text-center">
-                    <h2 class="section-heading text-black">Media</h2>
-                    <hr class="invert">
-                    <div class="container mt-5 mb-3" >
-                        <!--
-                        <a class=" col-md-6 col-xs-12" href="https://distributed.com/">
-                            <img height="80px" src="img/sponsors/distributed-dark.png" alt="Distributed">
-                        </a>
-                        <a class=" col-md-6 col-xs-12" href="https://bitcoin.fr/">
-                            <img height="80px" src="img/sponsors/bitcoinfr.png" alt="bitcoin.fr">
-                        </a>
-                    -->
-                    </div>
-                </div>
-            </div>
         </div>
     </section>
     <section id="contact" class= "bg-dark">
@@ -714,11 +633,12 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-4 offset-lg-4 col-xs-8 offset-xs-2 text-center">
-                    <a class="nounderline" href="sponsors/#" type="application/pdf">
+                    <a class="nounderline" href="mailto:sponsors@building-on-bitcoin.com?Subject=Conference%20Sponsorship">
                         <h5 class="code color-1" >
-                            Open sponsoring pack
+                            sponsors@building-on-bitcoin.com
                         </h5>
                     </a>
+
                 </div>
             </div>
         </div>
