--- a/index.html
+++ b/index.html
@@ -633,9 +633,9 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-4 offset-lg-4 col-xs-8 offset-xs-2 text-center">
-                    <a class="nounderline" href="mailto:sponsors@building-on-bitcoin.com?Subject=Conference%20Sponsorship">
-                        <h5 class="code color-1" >
-                            sponsors@building-on-bitcoin.com
+                    <a class="nounderline" href="sponsors/Bobsponsorship.pdf" type="application/pdf">
+                        <h5 class="code color-1">
+                            Sponsoring
                         </h5>
                     </a>
 
