Updated tito, styling and some minor changes

--- a/index.html
+++ b/index.html
@@ -21,7 +21,10 @@
     <link href="vendor/magnific-popup/magnific-popup.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
+
     <link href="css/style.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href='https://css.tito.io/v1.1' />
+
     <link rel="icon" href="img/favico.ico">
 
 </head>
@@ -517,17 +520,14 @@
                 <div class="col-lg-8 offset-lg-2 text-center">
                     <h2 class="section-heading text-black">Tickets</h2>
                     <hr class="invert">
+                    <p class="text-black">Last year, Breaking Bitcoin was a sold-out event. Be quick!</p>
+                    <tito-button event="chainsmiths-pt/building-on-bitcoin-2018">Buy Tickets Now</tito-button>
+                    <br /><br />
                     <p class="text-black">
-                        <b>€250</b> Individual or startup
-                        <br><br>
-                        <b>€500</b> Regular business / corporate / Late birds
-                        <br><br>
                         If you want to pay <strong>in bitcoins</strong>, or if you want to benefit from the Student Discount, contact us at:
                         <br>
                         <strong>contact@building-on-bitcoin.com</strong>
                     </p>
-                    <p class="text-black">Last year, Breaking Bitcoin was a sold-out event. Be quick!</p>
-                    <a href="#" class="btn btn-primary btn-xl mt-4">Buy Tickets Now</a>
                 </div>
             </div>
         </div>
@@ -666,6 +666,7 @@
     <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?key=AIzaSyARg--LShfkIe7tS9ULFmDg5DMtWDavqu8"></script>
     <!-- Custom scripts for this template -->
     <script src="js/creative.js"></script>
+    <script src="https://js.tito.io/v1" async></script>
 
 </body>
 
