Updated tito, styling and some minor changes

--- a/index.html
+++ b/index.html
@@ -520,14 +520,19 @@
                 <div class="col-lg-8 offset-lg-2 text-center">
                     <h2 class="section-heading text-black">Tickets</h2>
                     <hr class="invert">
-                    <p class="text-black">Last year, Breaking Bitcoin was a sold-out event. Be quick!</p>
-                    <tito-button event="chainsmiths-pt/building-on-bitcoin-2018">Buy Tickets Now</tito-button>
-                    <br /><br />
                     <p class="text-black">
+                        <b>€250</b> Individual or startup
+                        <br><br>
+                        <b>€500</b> Regular business / corporate / Late birds
+                        <br><br>
                         If you want to pay <strong>in bitcoins</strong>, or if you want to benefit from the Student Discount, contact us at:
                         <br>
                         <strong>contact@building-on-bitcoin.com</strong>
                     </p>
+                    <p class="text-black">Last year, Breaking Bitcoin was a sold-out event. Be quick!</p>
+                    <tito-button event="chainsmiths-pt/building-on-bitcoin-2018">Buy Tickets Now</tito-button>
+                    <br /><br />
+
                 </div>
             </div>
         </div>
