Updated tito, styling and some minor changes

--- a/index.html
+++ b/index.html
@@ -521,15 +521,30 @@
                     <h2 class="section-heading text-black">Tickets</h2>
                     <hr class="invert">
                     <p class="text-black">
-                        <b>€250</b> Individual or startup
+                        <b>€200</b> Individual or startup
                         <br><br>
-                        <b>€500</b> Regular business / corporate / Late birds
+                        <b>€400</b> Regular business / corporate / Late birds
                         <br><br>
                         If you want to pay <strong>in bitcoins</strong>, or if you want to benefit from the Student Discount, contact us at:
                         <br>
                         <strong>contact@building-on-bitcoin.com</strong>
                     </p>
                     <p class="text-black">Last year, Breaking Bitcoin was a sold-out event. Be quick!</p>
+
+                    <!-- Don't hurt me, it's a caching issue, want to fix as quickly-->
+                    <style type="text/css">
+                    .tito-tickets-button {
+                    color: white !important;
+                    border-color: #F78000;
+                    background-color: #F78000;
+                    padding: 15px 30px;
+                    font-weight: 700;
+                    text-transform: uppercase;
+                    border: none;
+                    border-radius: 0px;
+                    font-family: 'Helvetica Neue', 'Open Sans', Arial, sans-serif;
+                    cursor: pointer; }
+                    </style>
                     <tito-button event="chainsmiths-pt/building-on-bitcoin-2018">Buy Tickets Now</tito-button>
                     <br /><br />
 
