--- a/index.html
+++ b/index.html
@@ -683,10 +683,10 @@
     <script src="vendor/jquery/jquery.min.js"></script>
     <script src="vendor/tether/tether.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?key=AIzaSyARg--LShfkIe7tS9ULFmDg5DMtWDavqu8"></script>
+    <script src="https://js.tito.io/v1" async></script>
+    <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?key=AIzaSyARg--LShfkIe7tS9ULFmDg5DMtWDavqu8&callback=initMap" async defer></script>
     <!-- Custom scripts for this template -->
     <script src="js/creative.js"></script>
-    <script src="https://js.tito.io/v1" async></script>
 
 </body>
 
