--- a/index.html
+++ b/index.html
@@ -297,6 +297,43 @@
                               <span class="role">Chainsmiths</span>
                           </li>
                       </a>
+                      <a href="https://twitter.com/lopp" target="_blank" style="text-decoration:none !important;">
+                          <li>
+                              <img src="img/speakers/jamesonLopp.jpg" width="180" height="180" alt="Jameson Lopp "/>
+                              <span class="name">Jameson Lopp</span>
+                              <span class="role">BitGo</span>
+
+                          </li>
+                      </a>
+                      <a href="https://twitter.com/ziggamon" target="_blank" style="text-decoration:none !important;">
+                          <li>
+                              <img src="img/speakers/sergejKotliar.jpg" width="180" height="180" alt="Sergej Kotliar "/>
+                              <span class="name">Sergej Kotliar</span>
+                              <span class="role">Bitrefill</span>
+
+                          </li>
+                      </a>
+                      <a href="https://twitter.com/rperezmarco" target="_blank" style="text-decoration:none !important;">
+                          <li>
+                              <img src="img/speakers/ricardoPerezMarco.jpg" width="180" height="180" alt="Ricardo Pérez Marco "/>
+                              <span class="name">Ricardo Pérez Marco</span>
+                              <span class="role">CNRS</span>
+                          </li>
+                      </a>
+                      <a href="https://twitter.com/waxwing__" target="_blank" style="text-decoration:none !important;">
+                          <li>
+                              <img src="img/speakers/adamGibson.jpg" width="180" height="180" alt="Adam Gibson "/>
+                              <span class="name">Adam Gibson</span>
+                              <span class="role"></span>
+                          </li>
+                      </a>
+                      <a href="https://twitter.com/patestevao" target="_blank" style="text-decoration:none !important;">
+                          <li>
+                              <img src="img/speakers/patriciaEstevao.jpg" width="180" height="180" alt="Patrícia Estevão "/>
+                              <span class="name">Patrícia Estevão</span>
+                              <span class="role">UX Designer, Consultant</span>
+                          </li>
+                      </a>
                       <!--
                     <a href="https://twitter.com/sysmannet" target="_blank" style="text-decoration:none !important;">
                         <li>
@@ -386,14 +423,6 @@
 
                         </li>
                     </a>
-                    <a href="https://twitter.com/lopp" target="_blank" style="text-decoration:none !important;">
-                        <li>
-                            <img src="img/speakers/jamesonLopp.jpg" width="180" height="180" alt="Jameson Lopp "/>
-                            <span class="name">Jameson Lopp</span>
-                            <span class="role">BitGo</span>
-
-                        </li>
-                    </a>
                     <a href="https://twitter.com/jimmysong" target="_blank" style="text-decoration:none !important;">
                         <li>
                             <img src="img/speakers/jimmySong.jpg" width="180" height="180" alt="Jimmy Song "/>
@@ -474,13 +503,7 @@
                             <span class="role">PhD Student, KU Leuven</span>
                         </li>
                     </a>
-                    <a href="https://webusers.imj-prg.fr/~ricardo.perez-marco" target="_blank" style="text-decoration:none !important;">
-                        <li>
-                            <img src="img/speakers/ricardoPerezMarco.jpg" width="180" height="180" alt="Ricardo Perez Marco "/>
-                            <span class="name">Ricardo Perez Marco</span>
-                            <span class="role">CNRS</span>
-                        </li>
-                    </a>
+
                     <a href="https://twitter.com/nono2357" target="_blank" style="text-decoration:none !important;">
                         <li>
                             <img src="img/speakers/renaudLifchitz.jpg" width="180" height="180" alt="Renaud Lifchitz "/>
