--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                 <div class="row">
                     <div class="col-md-5"></div>
                     <div class="col-md-7">
-                        <h1 id="homeHeading">Building on Bitcoin </h1><h2>Conferences</h2>
+                        <h1 id="homeHeading">Building on Bitcoin </h1><h2>Conference</h2>
                         <hr>
                         <h2>Lisboa, Portugal, 03-04 July 2018</h2>
                         <a class="btn btn-primary btn-xl" href="#tickets">Book Tickets</a>
