--- a/index.html
+++ b/index.html
@@ -592,7 +592,7 @@
 
                     </div>
 
-                    <a target="_blank" href="https://www.google.com/maps/dir//Av.+Defensores+de+Chaves+85B,+1000-109+Lisboa,+Portugal/@38.7402236,-9.1470306,17z/data=!4m16!1m7!3m6!1s0xd1933a768229f8d:0x42618ab082e95301!2sAv.+Defensores+de+Chaves+85B,+1000-109+Lisboa,+Portugal!3b1!8m2!3d38.7402236!4d-9.1448366!4m7!1m0!1m5!1m1!1s0xd1933a768229f8d:0x42618ab082e95301!2m2!1d-9.1448366!2d38.7402236"
+                    <a id="mapButton" target="_blank" href="https://www.google.com/maps/dir//Av.+Defensores+de+Chaves+85B,+1000-109+Lisboa,+Portugal/@38.7402236,-9.1470306,17z/data=!4m16!1m7!3m6!1s0xd1933a768229f8d:0x42618ab082e95301!2sAv.+Defensores+de+Chaves+85B,+1000-109+Lisboa,+Portugal!3b1!8m2!3d38.7402236!4d-9.1448366!4m7!1m0!1m5!1m1!1s0xd1933a768229f8d:0x42618ab082e95301!2m2!1d-9.1448366!2d38.7402236"
                        class="btn btn-primary btn-xl mt-4">See on Google Maps</a>
                 </div>
             </div>
@@ -602,6 +602,55 @@
         <div class="container">
             <div class="row">
                 <div class="text-center">
+
+                    <h2 class="section-heading text-black">Sponsors</h2>
+                    <hr class="invert">
+                    <div class="container mt-5 mb-3" >
+                        <div class="col-md-12">
+                            <div class="row">
+                                <div class="col-12">
+                                    <h3 class="section-heading text-black">Gold</h3>
+                                    <hr class="invert">
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-6 offset-md-3">
+                                    <a class="sponsor" href="https://www.bitonic.nl/" target="_blank">
+                                        <img class="img-fluid" src="img/sponsors/gold/bitonic.png" alt="Bitonic">
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-12">
+                                    <h3 class="section-heading text-black">Silver</h3>
+                                    <hr class="invert">
+                                </div>
+                            </div>
+                            <div class="separator"></div>
+                            <div class="row">
+                                <div class="col-4 col-md-2 offset-md-4">
+                                    <a class="sponsor" href="https://www.f2pool.com/" target="_blank">
+                                        <img class="img-fluid" src="img/sponsors/silver/f2pool.png" alt="F2pool">
+                                    </a>
+                                </div>
+                                <div class="col-4 col-md-2">
+                                    <a class="sponsor" href="sponsors/Bobsponsorship.pdf" type="application/pdf" target="_blank">
+                                        <img class="img-fluid" src="img/sponsors/besponsor.png" alt="Sponsorship silver">
+                                    </a>
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="organizers" class="bg-white">
+        <div class="container">
+            <div class="row">
+                <div class="text-center">
+
                     <h2 class="section-heading text-black">Organizers</h2>
                     <hr class="invert">
                     <div class="container mt-5 mb-3" >
