--- a/index.html
+++ b/index.html
@@ -598,7 +598,7 @@
             </div>
         </div>
     </section>
-    <section id="sponsors" class="bg-white">
+    <section id="sponsors" class="bg-white" style="padding-bottom:0px">
         <div class="container">
             <div class="row">
                 <div class="text-center">
@@ -639,7 +639,6 @@
                                     </a>
                                 </div>
                             </div>
-
                         </div>
                     </div>
                 </div>
