--- a/index.html
+++ b/index.html
@@ -598,14 +598,13 @@
             </div>
         </div>
     </section>
-    <section id="sponsors" class="bg-white" style="padding-bottom:0px">
+    <section id="sponsors" class="bg-white">
         <div class="container">
             <div class="row">
                 <div class="text-center">
-
                     <h2 class="section-heading text-black">Sponsors</h2>
                     <hr class="invert">
-                    <div class="container mt-5 mb-3" >
+                    <div class="container mt-5 mb-3">
                         <div class="col-md-12">
                             <div class="row">
                                 <div class="col-12">
@@ -626,7 +625,6 @@
                                     <hr class="invert">
                                 </div>
                             </div>
-                            <div class="separator"></div>
                             <div class="row">
                                 <div class="col-4 col-md-2 offset-md-4">
                                     <a class="sponsor" href="https://www.f2pool.com/" target="_blank">
@@ -643,33 +641,47 @@
                     </div>
                 </div>
             </div>
-        </div>
-    </section>
-    <section id="organizers" class="bg-white">
-        <div class="container">
-            <div class="row">
-                <div class="text-center">
+            <div class="row padding-top">
+                <div class="col-md-6 col-sm-12">
+                    <div class="text-center">
+                        <h2 class="section-heading text-black">Media</h2>
+                        <hr class="invert">
+                    </div>
+                    <div class="row">
+                        <div class="col-6 col-md-6">
+                            <a href="https://distributed.com/" target="_blank">
+                                <img class="img-fluid" src="img/sponsors/distributed-dark.png" alt="Distributed">
+                            </a>
+                        </div>
+                        <div class="col-6 col-md-6">
+                            <a href="https://bitcoin.fr/" target="_blank">
+                                <img class="img-fluid" src="img/sponsors/bitcoinfr.png" alt="bitcoin.fr">
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6 col-sm-12">
+                    <div class="text-center">
+                        <h2 class="section-heading text-black">Organizers</h2>
+                        <hr class="invert">
+                    </div>
 
-                    <h2 class="section-heading text-black">Organizers</h2>
-                    <hr class="invert">
-                    <div class="container mt-5 mb-3" >
-                        <a class="chaintech" href="https://chainsmiths.com/" target="_blank">
-                            <img height="80" src="img/sponsors/chainsmiths.jpg" alt="Chainsmiths">
-                        </a>
-                        <a class=" col-md-6 col-xs-12" href="https://www.cryptofr.com/" target="_blank">
-                            <img height="80" src="img/sponsors/cryptofr.png" alt="Cryptofr.com">
-                        </a>
-                        <!--
-                        <a class="chaintech" href="https://www.chaintech.fr/" target="_blank">
-                            <img height="80" src="img/sponsors/chaintech.png" alt="La Chaintech">
-                        </a>
-                        <a class="chaintech" href="http://lecercleducoin.fr/" target="_blank">
-                            <img height="80" src="img/sponsors/cdc.png" alt="Le Cercle du Coin">
-                        </a>
-                    -->
-                        <a class="chaintech" href="https://digitalservice.group" target="_blank">
-                            <img height="80" src="img/sponsors/digitalservice1.png" alt="Digital Service">
-                        </a>
+                    <div class="row">
+                        <div class="col-4 col-sm-3 offset-sm-2">
+                            <a href="https://chainsmiths.com/" target="_blank">
+                                <img class="img-fluid"src="img/sponsors/chainsmiths.jpg" alt="Chainsmiths">
+                            </a>
+                        </div>
+                        <div class="col-4 col-sm-3">
+                            <a href="https://www.cryptofr.com/" target="_blank">
+                                <img class="img-fluid" src="img/sponsors/cryptofr.png" alt="Cryptofr.com">
+                            </a>
+                        </div>
+                        <div class="col-4 col-sm-3">
+                            <a  href="https://digitalservice.group" target="_blank">
+                                <img class="img-fluid" src="img/sponsors/digitalservice1.png" alt="Digital Service">
+                            </a>
+                        </div>
                     </div>
                 </div>
             </div>
